Added image and paragraphs with style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-md-10 col-sm-12" id="card">
+                <img src="https://images.unsplash.com/photo-1534158914592-062992fbe900?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=3784&amp;q=80"
+                    alt="Table Tennis">
+                <p id="card-title">Ping Pong Score Keeper</p>
+                <p id="score-keeper"><span id="scorePlayer1">0</span> to <span id="scorePlayer2">0</span><br>Use the
+                    Buttons below to keep score<br></p>
 
+            </div>
+        </div>
+    </div>
     <!--Bootstrap Script files-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
