--- a/index.html
+++ b/index.html
@@ -15,26 +15,43 @@
 
 <body>
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8 col-md-10 col-sm-12" id="card">
+        <div class="row justify-content-center" id="card">
+            <div class="col-lg-8 col-md-10 col-sm-12">
                 <img src="https://images.unsplash.com/photo-1534158914592-062992fbe900?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=3784&amp;q=80"
                     alt="Table Tennis">
                 <p id="card-title">Ping Pong Score Keeper</p>
-                <p id="score-keeper"><span id="scorePlayer1">0</span> to <span id="scorePlayer2">0</span><br>Use the
-                    Buttons below to keep score<br></p>
-
+                <div id="card-body">
+                    <p id="score-keeper"><span id="scorePlayer1">0</span> to <span id="scorePlayer2">0</span><br>Use the
+                        Buttons below to keep score<br></p>
+                    <div class="form-group form-inline">
+                        <label for="selectOption">Example select</label>
+                        <select class="form-control" id="selectOption">
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                            <option>6</option>
+                            <option>8</option>
+                            <option>9</option>
+                            <option>10</option>
+                            <option>11</option>
+                        </select>
+                    </div>
+                </div>
+                <button class="btn btn-success btn-lg">+1 Player One</button>
+                <button class="btn btn-primary btn-lg">+1 Player Two</button>
+                <button class="btn btn-danger btn-lg">Reset</button>
             </div>
         </div>
-    </div>
-    <!--Bootstrap Script files-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
-    </script>
-    <!--Custom Script files-->
-    <script src="script.js"></script>
+
+        <!--Bootstrap Script files-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+        </script>
+        <!--Custom Script files-->
+        <script src="script.js"></script>
 </body>
 
 </html>
